--- a/practical2.html
+++ b/practical2.html
@@ -16,6 +16,6 @@
         various different browsers,devices and screen sizes.
     </p>
     <h2>Output</h2>
-         <h3 style="text-align:center;">Live Page on Github</h3>
+         <!--<h3 style="text-align:center;">Live Page on Github</h3> -->
 </body>
 </html>
