--- a/practical2.html
+++ b/practical2.html
@@ -15,7 +15,7 @@
         building a simple page of HTML text to creating complex,responsive HTML5 websites designed to be accessed via
         various different browsers,devices and screen sizes.
     </p>
-    <h2>Output</h2>
+    <!--<h2>Output</h2> -->
          <!--<h3 style="text-align:center;">Live Page on Github</h3> -->
 </body>
 </html>
