--- a/practical2.html
+++ b/practical2.html
@@ -6,6 +6,13 @@
     <title>practical-2</title>
 </head>
 <body>
+    <style>
+        img{
+            display:block;
+            margin-left:auto;
+            margin-right:auto;
+        }
+    </style>
     <h2 style="color:red;">Practical-2:Live your First Web-Page on Git-Hub.</h2>
     <h1>Welcome to Fullstack Course</h1>
     <h2>About Course</h2>
@@ -15,7 +22,8 @@
         building a simple page of HTML text to creating complex,responsive HTML5 websites designed to be accessed via
         various different browsers,devices and screen sizes.
     </p>
-    <!--<h2>Output</h2> -->
-         <!--<h3 style="text-align:center;">Live Page on Github</h3> -->
+    <h2>Output</h2> 
+    <h3 style="text-align:center;">Live Page on Github</h3>
+    <img src="C:\Users\Lenovo\Desktop\work\image\practical-2 img.png"  width="80%" height="60%">
 </body>
 </html>
