--- a/practical2.html
+++ b/practical2.html
@@ -24,6 +24,6 @@
     </p>
     <h2>Output</h2> 
     <h3 style="text-align:center;">Live Page on Github</h3>
-    <img src=".../image1/practical-2 img.png"  width="80%" height="60%">
+    <img src="image1/practical-2 img.png"  width="80%" height="60%">
 </body>
 </html>
