--- a/practical1.html
+++ b/practical1.html
@@ -25,9 +25,9 @@
          <h2>Output</h2>
          <h3 style="text-align:center;">Online Sandbox Environment</h3>
 
-    <img src="C:\Users\Lenovo\Desktop\work\image\practical-1 img.png" width="80%" height="60%">
+    <img src="image1\practical-1 img.png" width="80%" height="60%">
     <h3 style="text-align:center;">Offline HTML Editor</h3>
-    <img src="C:\Users\Lenovo\Desktop\work\image\pratical-1 img2.png" width="80%" height="60%">
+    <img src="image1\pratical-1 img2.png" width="80%" height="60%">
 
 </body>
 </html>
