--- a/practical5.html
+++ b/practical5.html
@@ -16,7 +16,23 @@
     <area href="practical3.html" shape="rect" coords="732,42,989,120">
     <area href="practical4.html" shape="rect" coords="980,44,1237,109">
     <area href="practical5.html" shape="rect" coords="1253,45,1578,109" target="_blank">
-    </map>
-
 </map>
+    <h2>Introduction to Font-End Technologies</h2>
+<img src="image1/Practical-5.jpg" alt="fullstack languages" id="img2" usemap="#map1">
+<map name="#map1">
+    <area href="IntroTohtml.htm" shape="rect" coords="26,11,173,170" alt="introduction to html" 
+        target="_blank">
+
+    <area href="CSSIntro.htm" shape="circle" coords="288,100,92" alt="introduction to css" 
+        target="_blank">
+
+    <area href="JavscriptIntro.htm" shape="rect" coords="30,204,175,345" alt="Intorduction to Javascript"
+        target="_blank">
+
+    <area href="Bootstap.html" shape="poly" coords="287,201,348,224,336,298,287,324,239,298,233,225"
+        alt="Intorduction to Bootstap" target="_blank">
+</map>
+    <h3>click on any part of logo to know more about these Technologies</h3>
+
+</body>   
 </html>
