--- a/practical5.html
+++ b/practical5.html
@@ -18,7 +18,7 @@
     <area href="practical5.html" shape="rect" coords="1253,45,1578,109" target="_blank">
 </map>
     <h2>Introduction to Font-End Technologies</h2>
-<img src="image1/Practical-5.jpg" alt="fullstack languages" id="img2" usemap="#map1">
+<img src="./image1/Practical-5.jpg" alt="fullstack languages" id="img2" usemap="#map1">
 <map name="#map1">
     <area href="IntroTohtml.htm" shape="rect" coords="26,11,173,170" alt="introduction to html" 
         target="_blank">
