--- a/practical5.html
+++ b/practical5.html
@@ -7,7 +7,7 @@
     <style>
         #img1{
             margin-left: auto;
-            margin-right: auto;
+            margin-right:auto ;
             display: block;
            
         }
@@ -49,16 +49,16 @@
     <h2>Introduction to Font-End Technologies</h2>
 <img src="./image1/Practical-5.jpg" alt="fullstack languages" id="img2" usemap="#map1">
 <map name="#map1">
-    <area href="IntroTohtml.htm" shape="rect" coords="26,11,173,170" alt="introduction to html" 
+    <area href="practical5A.html" shape="rect" coords="26,11,173,170" alt="introduction to html" 
         target="_blank">
 
-    <area href="CSSIntro.htm" shape="circle" coords="288,100,92" alt="introduction to css" 
+    <area href="practical5B.html" shape="circle" coords="288,100,92" alt="introduction to css" 
         target="_blank">
 
-    <area href="JavscriptIntro.htm" shape="rect" coords="30,204,175,345" alt="Intorduction to Javascript"
+    <area href="practical5C.html" shape="rect" coords="30,204,175,345" alt="Intorduction to Javascript"
         target="_blank">
 
-    <area href="Bootstap.html" shape="poly" coords="287,201,348,224,336,298,287,324,239,298,233,225"
+    <area href="practical5D.html" shape="poly" coords="287,201,348,224,336,298,287,324,239,298,233,225"
         alt="Intorduction to Bootstap" target="_blank">
 </map>
     <h3>click on any part of logo to know more about these Technologies</h3>
