--- a/practical5.html
+++ b/practical5.html
@@ -34,7 +34,7 @@
         }
     </style>
 </head>
-<body>
+<body style="background-color: lightgray;">
     
 
 <img src="./image1/img1.png" id="img1" usemap="#menu">
