--- a/practical5D.html
+++ b/practical5D.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introduction to Bootstrap</title>
+    <style>
+        body{
+            background-color: lightgrey;
+        }
+        p{
+            background-color: lightslategray;
+        }
+        .img{
+            text-align: center;
+            padding-bottom: 60px;
+        }
+    </style>
 </head>
 <body>
-    <img src="" alt="Introduction to Bootstrap">
+    <div class="img">
+    <img src="./image1/bootstrapp.jpg" alt="Introduction to Bootstrap">
+    </div>
     <p></p>Bootstrap is a web framework that focuses on simplifying the development of informative web pages (as opposed to web apps). 
         The primary purpose of adding it to a web project is to apply Bootstrap's choices of color, size, font and layout to that project. As such, the primary factor is whether the developers in charge find those choices to their liking. 
         Once added to a project, Bootstrap provides basic style definitions for all HTML elements. The result is a uniform appearance for prose, tables and form elements across web browsers. In addition, developers can take advantage of CSS classes defined in Bootstrap to further customize the appearance of their contents.
