--- a/practical5A.html
+++ b/practical5A.html
@@ -5,8 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Introduction</title>
 </head>
+<style>
+    body{
+        background-color: lightgrey;
+    }
+    p{
+        background-color: lightslategray;
+    }
+    .img{
+        text-align: center;
+        padding-bottom: 60px;
+    }
+</style>
 <body>
-    <img scr=""alt="Introduction to HTML">
+    <div class="img">
+    <img src="./image1/html.jpg "alt="Introduction to HTML">
+    </div>
     <p>HTML stands for Hypertext Markup Language, and it is the most widely used language to write Web Pages.
         Hypertext refers to the way in which Web pages (HTML documents) are linked together. Thus, the link available on a webpage is called Hypertext.
         As its name suggests, HTML is a Markup Language which means you use HTML to simply "mark-up" a text document with tags that tell a Web browser how to structure it to display.
