--- a/practical5B.html
+++ b/practical5B.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tntroduction to CSS</title>
+    <style>
+        body{
+            background-color: lightgrey;
+        }
+        p{
+            background-color: lightslategray;
+        }
+        .img{
+            text-align: center;
+            padding-bottom: 60px;
+        }
+    </style>
 </head>
 <body>
-    <img src="" alt="Introduction to CSS"
+    <div class="img">
+    <img src="./image1/css.jpg" alt="Introduction to CSS">
+    </div>
     <p>CSS is short for Cascading Style Sheets, and is the preferred way for setting the look and feel of a website. Cascading Style Sheets (CSS) is a markup language responsible for how your web pages will look like. It controls the colors, fonts, and layouts of your website elements.
         This style sheet language also allows you to add effects or animations to your website. You can use it to display some CSS 
         animations like click button effects, spinners or loaders, and animated backgrounds. Without CSS, your website will appear as 
