--- a/practical5C.html
+++ b/practical5C.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introduction to jQuery</title>
+    <style>
+        body{
+            background-color: lightgrey;
+        }
+        p{
+            background-color: lightslategray;
+        }
+        .img{
+            text-align: center;
+            padding-bottom: 60px;
+        }
+    </style>
 </head>
 <body>
-    <img src=" " alt="Introduction to jQuery">
+    <div class="img">
+    <img src="./image1/java.jpg " alt="Introduction to jQuery">
+    </div>
     <p class="pages">jQuery is a fast, small, cross-platform and feature-rich JavaScript library. It is designed to simplify the client-side scripting of HTML.
         It makes things like HTML document traversal and manipulation, animation, event handling, and AJAX very simple with an easy-to-use API that works on a lot of different type of browsers.
        The main purpose of jQuery is to provide an easy way to use JavaScript on your website to make it more interactive and attractive. It is also used to add animation
