--- a/practical5A.html
+++ b/practical5A.html
@@ -19,7 +19,7 @@
 </style>
 <body>
     <div class="img">
-    <img src="./image1/html.jpg "alt="Introduction to HTML">
+    <img src="./image1/htmlintro.jpg "alt="Introduction to HTML">
     </div>
     <p>HTML stands for Hypertext Markup Language, and it is the most widely used language to write Web Pages.
         Hypertext refers to the way in which Web pages (HTML documents) are linked together. Thus, the link available on a webpage is called Hypertext.
