--- a/practical4main.html
+++ b/practical4main.html
@@ -28,6 +28,8 @@
        <a href="practical4.html">Practical-4</a>
        <br>
        5.create a webpage showing the use of image-tag in the Web application <a href="practical5.html">Practical-5</a>
+       <br>
+       6.create a webpage showing the CSS layouts using CSS layout Properties <a href="practical-6.html">Practical-6</a>
        
     </p>
 
