--- a/practical4main.html
+++ b/practical4main.html
@@ -30,6 +30,8 @@
        5.create a webpage showing the use of image-tag in the Web application <a href="practical5.html">Practical-5</a>
        <br>
        6.create a webpage showing the CSS layouts using CSS layout Properties <a href="practical-6.html">Practical-6</a>
+       <br>
+       7.create a webpage showing structure of your responsive web layout <a href="practical7.html">Practical-7</a>
        
     </p>
 
