--- a/practical4main.html
+++ b/practical4main.html
@@ -32,6 +32,8 @@
        6.create a webpage showing the CSS layouts using CSS layout Properties <a href="practical-6.html">Practical-6</a>
        <br>
        7.create a webpage showing structure of your responsive web layout <a href="practical7.html">Practical-7</a>
+       <br>
+       8.create a webpage with navigation bar<a href="practical-8.html">practical-8</a>
        
     </p>
 
