--- a/practical-8.html
+++ b/practical-8.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Navigation bar</title>
   <style>
     * {
       padding: 0;
@@ -18,7 +18,7 @@
 
     .container {
 
-      font-size: 40px;
+      font-size: 20px;
       width: 1500px;
       /* padding: 15px; */
       margin: 0 auto;
