--- a/practical4main.html
+++ b/practical4main.html
@@ -34,6 +34,8 @@
        7.create a webpage showing structure of your responsive web layout <a href="practical7.html">Practical-7</a>
        <br>
        8.create a webpage with navigation bar<a href="practical-8.html">practical-8</a>
+       <br>
+       9.create a webpage with responsive navigation bar<a href="practical-9.html">practical-9</a>
        
     </p>
 
