--- a/practical-9.html
+++ b/practical-9.html
@@ -23,7 +23,8 @@
           <li><a href="#Technologies">Technologies</a></li>
           <li><a href="#Contacts">Contact</a></li>
           <label for="check" class="hide-btn">
-            <i class="fa fa-times"></i>
+            <i class="fa fa-times">
+            </i>
           </label>
         </ul>
       </div>
