--- a/practical-17.html
+++ b/practical-17.html
@@ -83,13 +83,13 @@
         let hour = today.getHours();
 
         if (hour < 12) {
-            document.body.style.backgroundImage = 'url("https://raw.githubusercontent.com/Nehaadnekar/web-dev2020/master/images/morning.jpg")';
+            document.body.style.backgroundImage = 'url("https://github.com/Reema1234ag/fullstack_practicals/blob/master/image1/morning.jpg?raw=true")';
             greeting.innerHTML = "Good Morning";
         } else if (hour < 18) {
-            document.body.style.backgroundImage = 'url("https://raw.githubusercontent.com/Nehaadnekar/web-dev2020/master/images/afternoon.jpg")';
+            document.body.style.backgroundImage = 'url("https://github.com/Reema1234ag/fullstack_practicals/blob/master/image1/afternoon.jpg?raw=true")';
             greeting.innerHTML = "Good Afternoon";
         } else {
-            document.body.style.backgroundImage = 'url("https://raw.githubusercontent.com/Nehaadnekar/web-dev2020/master/images/night.jpg")';
+            document.body.style.backgroundImage = 'url("https://github.com/Reema1234ag/fullstack_practicals/blob/master/image1/evening.jpg?raw=true")';
             greeting.innerHTML = "Good Evening";
             document.body.style.color = "white";
         }
